// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when a tag is being deleted 1`] = `
<div
  className="src-modules-tag-components-editable-tag-collection__container"
>
  <FadeTransition
    in={false}
  >
    <shouldUpdate(NoEntries)
      label="No Tags"
    />
  </FadeTransition>
  <FadeTransition
    in={true}
  >
    <ul
      role="presentation"
    >
      <EditableTag
        isBeingDeleted={false}
        key="medium/one"
        onDelete={[Function]}
        tag={
          Object {
            "id": "medium/one",
            "label": "One",
          }
        }
      />
      <EditableTag
        isBeingDeleted={true}
        key="medium/two"
        onDelete={[Function]}
        tag={
          Object {
            "id": "medium/two",
            "label": "Two",
          }
        }
      />
    </ul>
  </FadeTransition>
</div>
`;

exports[`should render correctly when loading 1`] = `
<div
  className="src-modules-tag-components-editable-tag-collection__container"
>
  <BoxesLoader
    size="large"
    type="default"
  />
  <FadeTransition
    in={false}
  >
    <shouldUpdate(NoEntries)
      label="No Tags"
    />
  </FadeTransition>
  <FadeTransition
    in={false}
  >
    <ul
      role="presentation"
    />
  </FadeTransition>
</div>
`;

exports[`should render correctly when no tags were loaded 1`] = `
<div
  className="src-modules-tag-components-editable-tag-collection__container"
>
  <FadeTransition
    in={true}
  >
    <shouldUpdate(NoEntries)
      label="No Tags"
    />
  </FadeTransition>
  <FadeTransition
    in={false}
  >
    <ul
      role="presentation"
    />
  </FadeTransition>
</div>
`;

exports[`should render correctly when tags are null 1`] = `
<div
  className="src-modules-tag-components-editable-tag-collection__container"
>
  <BoxesLoader
    size="large"
    type="default"
  />
  <FadeTransition
    in={false}
  >
    <shouldUpdate(NoEntries)
      label="No Tags"
    />
  </FadeTransition>
  <FadeTransition
    in={false}
  >
    <ul
      role="presentation"
    />
  </FadeTransition>
</div>
`;

exports[`should render correctly when tags were loaded 1`] = `
<div
  className="src-modules-tag-components-editable-tag-collection__container"
>
  <FadeTransition
    in={false}
  >
    <shouldUpdate(NoEntries)
      label="No Tags"
    />
  </FadeTransition>
  <FadeTransition
    in={true}
  >
    <ul
      role="presentation"
    >
      <EditableTag
        isBeingDeleted={false}
        key="medium/one"
        onDelete={[Function]}
        tag={
          Object {
            "id": "medium/one",
            "label": "One",
          }
        }
      />
    </ul>
  </FadeTransition>
</div>
`;
